lintian-brush (0.23) UNRELEASED; urgency=medium

  * Add fixer for comma-separated-files-in-dep5-copyright.
  * Disable strict parsing of copyright file.
  * Support reading upstream metadata from configure.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 14 Aug 2019 00:30:39 +0000

lintian-brush (0.22) unstable; urgency=medium

  * Ignore github URLs with just a single paths component when looking
    for repo URLs.
  * Support upgrading from --no-restart-on-upgrade
  * Fix guessing from launchpad URLs.
  * Add fixer for debian-watch-file-uses-deprecated-githubredir.
  * Don't attempt to upgrade cdbs packages to anything over debhelper
    10.
  * Don't complain about reformatting issues if no changes have been
    made.
  * Support removing upstart conffiles as part of upgrade to debhelper
    11.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 13 Aug 2019 20:38:35 +0000

lintian-brush (0.21) unstable; urgency=medium

  * Use vcswatch-like regex to find salsa.debian.org.
  * Support suggesting Vcs-* URLs based on vcswatch.
  * Avoid adding unnecessary spacing when removing first dependency from
    a control field.
  * Don't print confusing warning message about directories under
    debian/patches/.
  * Add fixer for vcs-field-bitrotted.
  * Add fixer for vcs-field-not-canonical.
  * Add fixer for vcs-field-mismatch.
  * debhelper-tools-from-autotools-dev-are-deprecated: Don't bump
    debhelper version when not removing autotools-dev usage.
  * Sort paths so that directories get added before the files they
    contain (on VCSes where it matters).

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 10 Aug 2019 13:06:04 +0000

lintian-brush (0.20) unstable; urgency=medium

  * Fix lintian-brush when pyinotify is not installed.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 03 Aug 2019 20:28:30 +0000

lintian-brush (0.19) unstable; urgency=medium

  * Run python fixers in-process, to avoid Python interpreter and module