@@ -32,6 +32,7 @@ MAINTAINER_EMAIL_MAP = {
         'perl-team/modules/packages',
     'pkg-java-maintainers@lists.alioth.debian.org': 'java-team',
     'pkg-ruby-extras-maintainers@lists.alioth.debian.org': 'ruby-team',
+    'pkg-clamav-devel@lists.alioth.debian.org': 'clamav-team',
     }
 
 
