@@ -1,2 +1,0 @@
-#!/bin/sh
-add libmodule-build-perl to Build-Depends, remove from Build-Depends-Indep
