@@ -3,6 +3,7 @@ lintian-brush (0.23) UNRELEASED; urgency=medium
   * Add fixer for comma-separated-files-in-dep5-copyright.
   * Disable strict parsing of copyright file.
   * Support reading upstream metadata from configure.
+  * Add fixer for libmodule-build-perl-needs-to-be-in-build-depend.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 14 Aug 2019 00:30:39 +0000
 
